# mentor-ai

backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_create_user_table.py  2a3b4c5d6e7f_create_document_table.py  3a4b5c6d7e8f_add_rag_fields_to_document.py  4a5b6c7d8e9f_create_conversation_tables.py  5a6b7c8d9e0f_create_planner_tables.py  6a7b8c9d0e1f_create_interview_tables.py  7a8b9c0d1e2f_create_progress_tables.py  dc270375d3ca_change_goal_and_topic_to_text.py  e3264bab8d11_create_memory_tables.py
backend/app/: main.py
backend/app/agents/interview/: graph.py  nodes.py  prompt.py  resume_parser.py  service.py  state.py
backend/app/agents/planner/: graph.py  nodes.py  prompt.py  service.py  state.py
backend/app/config/: config.py
backend/app/core/: logging.py
backend/app/database/: base.py  init_db.py  session.py
backend/app/memory/: learning_service.py  manager.py  profile_service.py  summary_service.py
backend/app/models/: conversation.py  document.py  interview.py  memory.py  planner.py  progress.py  user.py
backend/app/rag/: chunker.py  embedding_service.py  indexing_service.py  pdf_loader.py  rag_service.py  retriever.py  text_cleaner.py  vector_store.py  vector_store_fallback.py
backend/app/repositories/: document.py
backend/app/schemas/: conversation.py  document.py  interview.py  memory.py  planner.py  progress.py  supervisor.py  user.py
backend/app/services/: document.py  storage.py
backend/app/utils/: security.py
frontend/: README.md  (+4 more)
(+70 files in other folders)
